# BlackBook_TK

./: .gitignore  BLOCKCHAIN_ARCHITECTURE.md  Cargo.toml  LIVE_BETTING_LOGIC_REVIEW.md  LIVE_BETTING_OPTIMIZATION.md  OPTIMIZATION_BEFORE_AFTER.md  OPTIMIZATION_QUICK_REFERENCE.md  QUICKSTART.md  endpoints.txt  package-lock.json  predictionmarket.txt
blackBook/: .env  github_universe_event.json  post_ai_event.ps1  test_ai_event.json  test_github_event.ps1
blackBook/src/: event.rss  ledger.rs  lib.rs  main.rs
bun/: README_TESTS.md  TESTING.md  TEST_COMMANDS.sh  TEST_REFERENCE.sh  TEST_SETUP_COMPLETE.txt  package.json  test-api.html  tsconfig.json
bun/public/: index.html  styles-simplified.css  styles.css
bun/public/css/: admin.css  main.css  pages.css
bun/public/js/: main.js
bun/public/js/lib/: debug_console.js
bun/src/: main.ts  server.ts
bun/src-tauri/: Cargo.toml  tauri.conf.json
bun/src-tauri/src/: commands.rs  lib.rs  main.rs
bun/src/components/: AdminPanel.ts  LiveBetting.ts
bun/src/lib/: backend_service.ts  debug_console.ts  polymarket.ts  price_action.ts  prices.ts  tauri.ts  transfers.ts  ui_builder.ts
bun/src/pages/: AllMarkets.ts  Business.ts  Crypto.ts  Home.ts  Recipes.ts  Tech.ts
bun/src/types/: index.ts
bun/tests/: endpoints.test.ts  tester.ts
frontend-bun/: README.md
frontend-bun/public/: index.html  style.css
frontend-bun/src/: main.ts  server.ts
frontend-bun/src/components/: LiveBetting.ts
frontend-bun/src/types/: index.ts
