[package]
name = "blackbook"
version = "1.0.0"
description = "BlackBook L1 Prediction Market"
authors = ["BlackBook"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "shell-open"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
roxmltree = "0.18"
chrono = "0.4"
blackbook-prediction-market = { path = "../../blackBook" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "blackbook_lib"
path = "src/lib.rs"

[[bin]]
name = "blackbook"
path = "src/main.rs"
